# c-midiplayer

./: CMakeLists.txt  README.md  batch_test.c  ideas.txt  main.c  midiplayer.c  midiplayer.h  old.c
